# SW_test_task

./: CMakeLists.txt  CMakeLists.txt.IuOnVS  CMakeLists.txt.PLZNyI  CMakeLists.txt.YLBVoY  CMakeLists.txt.YjKObb  CMakeLists.txt.aZrtvR  CMakeLists.txt.feKfxo  README.md  commands_example.txt
src/: main.cpp
src/AI/: AI_General.cpp  AI_General.hpp  AI_Hunter.cpp  AI_Hunter.h  AI_Hunter.hpp  AI_OrderPreparation.cpp  AI_OrderPreparation.h  AI_OrderPreparation.hpp  AI_Swordsman.cpp  AI_Swordsman.h  AI_Swordsman.hpp  AI_TurnMaster.cpp  AI_TurnMaster.hpp  AI_TurnPreparation.cpp  AI_TurnPreparation.hpp  AI_Unit.hpp  AI_UnitSpawner.cpp  AI_UnitSpawner.h  AI_UnitSpawner.hpp  ai.cpp  ai.h  ai_TurnMaster.cpp  ai_TurnMaster.h  ai_spawnhunter.cpp  ai_spawnhunter.h  ai_spawnswordsman.cpp  ai_spawnswordsman.h
src/Entities/: GameField.cpp  GameField.hpp  Unit.cpp  Unit.hpp  UnitEnums.hpp  UnitsHeap.cpp  UnitsHeap.hpp
src/Mechanics/: Attack.hpp  March.cpp  March.hpp  MechanicsResults.cpp  MechanicsResults.hpp  MeleeAttack.cpp  MeleeAttack.hpp  RangeAttack.cpp  RangeAttack.hpp  Spawn.cpp  Spawn.hpp
src/Simulation/: Simulation.cpp  Simulation.hpp
src/Utils/: Coordinates.cpp  Coordinates.hpp  MoveOrder.cpp  MoveOrder.hpp  RandomFuncs.cpp  RandomFuncs.hpp  UnitPaths.cpp  UnitPaths.hpp
src/entities/: Unit.cpp  Unit.h  UnitEnums.h  gamefield.cpp  gamefield.h  unitsheap.cpp  unitsheap.h
src/mechanics/: Spawn.cpp  Spawn.h  attack.h  march.cpp  march.h  mechanicsresults.cpp  mechanicsresults.h  meleeattack.cpp  meleeattack.h  rangeattack.cpp  rangeattack.h
src/simulation/: simulation.cpp  simulation.h
(+59 files in other folders)
